--- a/system_design/python/src/auth/manifests/secret.yml
+++ b/system_design/python/src/auth/manifests/secret.yml
@@ -1,8 +1,9 @@
 apiVersion: v1
-kind: secret
+kind: ConfigMap
 metadata:
-  name: auth-secret
-stringData:
-  MYSQL_PASSWORD: Auth123
-  JWT_SECRET: garloop
-type: 0paque
+  name: auth-configmap
+data:
+  MYSQL_HOST: host.minikube.internal
+  MYSQL_USER: auth_user
+  MYSQL_DB: auth
+  MYSQL_PORT: "3306"
