--- a/system_design/python/src/auth/Dockerfile
+++ b/system_design/python/src/auth/Dockerfile
@@ -2,14 +2,18 @@ FROM python:3.10-slim-bullseye
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends --no-install-suggests \
-  build-essential \
-  && pip install --no-cache-dir --upgrade pip
+  build-essential default-libmysqlclient-dev pkg-config \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
+
 COPY ./requirements.txt /app
-RUN pip install --no-cache-dir --requirement /app/requirements.txt
+RUN pip install --no-cache-dir --upgrade pip \
+  && pip install --no-cache-dir -r /app/requirements.txt
+
 COPY . /app
 
-EXPOSE 8080
+EXPOSE 5000
 
 CMD ["python3", "server.py"]
