--- a/system_design/python/src/converter/Dockerfile
+++ b/system_design/python/src/converter/Dockerfile
@@ -3,11 +3,15 @@ FROM python:3.10-slim-bullseye
 RUN apt-get update \
   && apt-get install -y --no-install-recommends --no-install-suggests \
   build-essential ffmpeg \
-  && pip install --no-cache-dir --upgrade pip
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
+
 COPY ./requirements.txt /app
-RUN pip install --no-cache-dir --requirement /app/requirements.txt
+RUN pip install --no-cache-dir --upgrade pip \
+  && pip install --no-cache-dir -r /app/requirements.txt
+
 COPY . /app
 
 CMD ["python3", "consumer.py"]
