--- a/system_design/python/src/converter/manifests/configmap.yaml
+++ b/system_design/python/src/converter/manifests/configmap.yaml
@@ -1,7 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: converter-configmap
+    name: converter-configmap
 data:
-  MP3_QUEUE: "mp3"
-  VIDEO_QUEUE: "video"
+    MP3_QUEUE: "mp3"
+    VIDEO_QUEUE: "video"
+    MONGO_HOST: "host.minikube.internal"
+    MONGO_PORT: "27017"
+    RABBITMQ_HOST: "rabbitmq"
