--- a/system_design/python/src/gateway/manifests/configmap.yml
+++ b/system_design/python/src/gateway/manifests/configmap.yml
@@ -1,6 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: gateway-configmap
+    name: gateway-configmap
 data:
-  AUTH_SVC_ADDRESS: "auth:5000"
+    AUTH_SVC_ADDRESS: "auth:5000"
+    MONGO_HOST: "host.minikube.internal"
+    MONGO_PORT: "27017"
+    RABBITMQ_HOST: "rabbitmq"
