--- a/system_design/python/src/auth/manifests/secret.yml
+++ b/system_design/python/src/auth/manifests/secret.yml
@@ -1,9 +1,8 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: auth-configmap
-data:
-  MYSQL_HOST: host.minikube.internal
-  MYSQL_USER: auth_user
-  MYSQL_DB: auth
-  MYSQL_PORT: "3306"
+    name: auth-secret
+stringData:
+    JWT_SECRET: "<your-jwt-secret-here>"
+    MYSQL_PASSWORD: "<your-mysql-password-here>"
+type: Opaque
